fixes for jumping on route change

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,9 +1,5 @@
-.sidebar {
-  background: #292929;
-}
-
 .app-wrapper {
-  min-height: 100vh;
+  height: 100vh;
 }
 @media (min-width: 650px) {
   .app-wrapper {
